--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobx-observer-hook",
+  "name": "@stickyants/mobx-observer-hook",
   "version": "1.0.0",
   "description": "An observer React hook for mobx",
   "main": "lib/index.js",
@@ -42,5 +42,9 @@
   "bugs": {
     "url": "https://github.com/stickyants/mobx-observer-hook/issues"
   },
-  "homepage": "https://github.com/stickyants/mobx-observer-hook#readme"
+  "homepage": "https://github.com/stickyants/mobx-observer-hook#readme",
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {}
 }
